--- a/Express-handlebars/views/layouts/main.hbs
+++ b/Express-handlebars/views/layouts/main.hbs
@@ -11,6 +11,9 @@
     <title>Hello, world!</title>
   </head>
   <body>
+    <div class=jumbotron>
+      <h1>EFAS</h1>
+    </div>  
     {{{body}}}
   </body>
 </html>
