--- a/2-ExpressHandlebars/views/members.hbs
+++ b/2-ExpressHandlebars/views/members.hbs
@@ -5,6 +5,7 @@
         <th scope="col">First Name</th>
         <th scope="col">Last Name</th>
         <th scope="col">Email</th>
+        <th scope="col">Status</th>
     </tr>
     </thead>
     
@@ -15,6 +16,11 @@
         <td scope="col">{{firstName}}</td>
         <td scope="col">{{surname}}</td>
         <td scope="col">{{email}}</td>
+        {{#if isManager}}
+            <td scope="col">Admin</td>
+        {{else}}
+            <td scope="col">Member</td>
+        {{/if}}
     </tr>
     {{/each}}
     </tbody>
