--- a/2-ExpressHandlebars/views/home.hbs
+++ b/2-ExpressHandlebars/views/home.hbs
@@ -1,16 +1,2 @@
-<nav class="navbar navbar-expand-sm bg-dark">
-    <ul class="navbar-nav">
-        <li class="nav-item">
-            <a href="#" class="nav-link">Home</a>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link">About</a>
-        </li>
-    </ul>
-
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-            <a href="/members" class="nav-link">Members</a>
-        </li>
-    </ul>
-</nav>
+{{> jumbotron}}
+{{> nav}}
