Adding variables to partials

--- a/2-ExpressHandlebars/views/home.hbs
+++ b/2-ExpressHandlebars/views/home.hbs
@@ -1,4 +1,4 @@
 {{!-- insert the jumbotron.hbs partial --}}
-{{> jumbotron}}
+{{> jumbotron headline="EFAS"}}
 {{!-- insert the navbar.hbs partial --}}
 {{> navbar}}
