--- a/2-ExpressHandlebars/views/home.hbs
+++ b/2-ExpressHandlebars/views/home.hbs
@@ -1,4 +1,4 @@
 {{!-- insert the jumbotron.hbs partial --}}
-{{> jumbotron headline="EFAS"}}
+{{> jumbotron headline="EFAS" background="bg-danger"}}
 {{!-- insert the navbar.hbs partial --}}
 {{> navbar}}
