--- a/2-ExpressHandlebars/views/partials/navbar.hbs
+++ b/2-ExpressHandlebars/views/partials/navbar.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<nav class="navbar navbar-dark bg-dark navbar-expand-sm">
     <ul class="navbar-nav">
         <li class="nav-item">
             <a href="/" class="nav-link">Home</a>
