--- a/2-ExpressHandlebars/views/partials/navbar.hbs
+++ b/2-ExpressHandlebars/views/partials/navbar.hbs
@@ -1,11 +1,10 @@
 <nav class="navbar navbar-dark bg-dark navbar-expand-sm">
     <ul class="navbar-nav">
-        <li class="nav-item">
-            <a href="/" class="nav-link">Home</a>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link">About</a>
-        </li>
+        {{#each navItems}}
+            <li class="nav-item">
+                <a href="/{{this}}" class="nav-link">{{this}}</a>
+            </li>
+        {{/each}}
     </ul>
 
     <ul class="navbar-nav ml-auto">
