--- a/3-Forms/views/SignUp.hbs
+++ b/3-Forms/views/SignUp.hbs
@@ -1,39 +1,26 @@
 {{!-- method=post and action=/signUp together redirect to app.post(/signUp) on submition --}}
 <form method="POST" action="/SignUp">
-    <fieldset border=1pt>
-        <legend>Sign up</legend>
-        <div class="form-group">
-            <div class="form-row">
-                <div class="col-sm-4">
-                    {{!-- 'for' is to connect label to textfield; when you click on it, it gets the cursor to the textfield --}}
-                    <label for="firstName">First Name</label>
-                    <input class="form-control" type="text" name="firstName" id="firstName" placeholder="John" required /> 
-                </div>
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label col-form-label-lg text-center">First Name</label>
+        <input type="text" class="col-sm-2 form-control form-control-lg" name="firstName" placeholder="John" required>
+        <label class="col-sm-2 col-form-label col-form-label-lg text-center">Surname</label>
+        <input type="text" class="col-sm-2 form-control form-control-lg" name="surname" placeholder="Doe" required />
+    </div>
 
-                <div class="col-sm-4">
-                    <label for="surname">Surname</label>
-                    <input class="form-control" type="text" name="surname" id="surname" placeholder="Doe" required />
-                </div>
-            </div>
-        </div>
+    <div class="form-group row">
+        <label for="email" class="col-sm-2 col-form-label col-form-label-lg text-center">Email</label>
+        <input type="email" class="form-control form-control-lg col-sm-6" name="email" id="email"
+            placeholder="example@efas.com" required />
+    </div>
 
-        <div class="form-group">
-            <div class="form-row">
-                <div class="col-sm-4">
-                    <label for="Email">Email</label>
-                    <input class="form-control" type="email" name="email" id="email" placeholder="example@martianally.com" required />
-                </div>
+    <div class="form-group row">
+        <label for="password" class="col-sm-2 col-form-label col-form-label-lg text-center">Password</label>
+        <input type="password" class="form-control form-control-lg col-sm-6" name="password" id="password" required />
+    </div>
 
-                <div class="col-sm-4">
-                    <label for="password">Password</label>
-                    <input class="form-control" type="password" name="password" id="password" required /> 
-                </div>
-            </div>
-        </div>
+    <div class="form-group">
+        <input class="form-control" type="file" name="profilePic" />
+    </div>
 
-        <div class="form-group">
-            <input class="form-control" type="file" name="profilePic" />
-        </div>
-    </fieldset>
-    <button type="submit bg-danger">Submit</button>
+    <button type="submit">Submit</button>
 </form>
