--- a/3-Forms/views/partials/navbar.hbs
+++ b/3-Forms/views/partials/navbar.hbs
@@ -1,10 +1,13 @@
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
     <ul class="navbar-nav">
-        {{#each navItems}}
+        
         <li class="nav-item">
-            <a href="/{{this}}" class="nav-link">{{this}}</a>
+            <a href="/" class="nav-link">Home</a>
         </li>
-        {{/each}}
+        <li class="nav-item">
+            <a href="/about" class="nav-link">About</a>
+        </li>
+        
     </ul>
 
     <ul class="navbar-nav ml-auto">
