--- a/3-Forms/views/partials/jumbotron.hbs
+++ b/3-Forms/views/partials/jumbotron.hbs
@@ -1,3 +1,3 @@
-<div class="jumbotron {{jumboBackground}}">
-    <h1>{{jumboHeadline}}</h1>
+<div class="jumbotron mb-0 bg-success">
+    <h1>EFAS</h1>
 </div>
