--- a/3-Form/views/layouts/main.hbs
+++ b/3-Form/views/layouts/main.hbs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="/public/style.css" rel="stylesheet" />
+        <link href="/public/css/style.css" rel="stylesheet" />
         <title>{{title}}</title>
     </head>
 
-    <body class="grid-12-20 h-100vh gap-5px">
+    <body class="grid-12-20 h-100vh">
         {{{body}}}
     </body>
 </html>
