--- a/3-Form/views/partials/jumbotron.hbs
+++ b/3-Form/views/partials/jumbotron.hbs
@@ -1,1 +1,7 @@
-<div class="span-all-grid-col span-3-grid-row flex justify-space-around align-items-centre bg-green">{{jumbo_content}}</div>
+<div class="span-all-cols span-3-rows flex justify-space-around align-items-centre bg-green bold-xxlg">
+    {{jumbo_content}}
+    <form class="flex gap-half">
+        <input type="text" name="word" class="xlg radius-half" />
+        <button type="submit" class="bold-lg radius-half">Search</button>
+    </form>
+</div>
