--- a/4-sequelize/views/partials/jumbotron.hbs
+++ b/4-sequelize/views/partials/jumbotron.hbs
@@ -2,8 +2,7 @@
     <div class="bold xxlg">{{jumbo_content}}</div>
 
     <form class="flex gap-1rem">
-        <input class="lg br-half-rem" type="text" name="email" placeholder="Email" />
-        <input class="lg br-half-rem" type="password" name="password" placeholder="Password" />
-        <button class="lg br-half-rem bold" type="submit">Log in</button>
+        <input class="lg radius-half" type="text" name="word" placeholder="Look up a word" />
+        <button class="lg br-half-rem bold" type="submit">Search</button>
     </form>
 </div>
