--- a/3-Form/views/partials/sign_up_form.hbs
+++ b/3-Form/views/partials/sign_up_form.hbs
@@ -1,37 +1,37 @@
-<form method="POST" action="/sign_up" class="span-6-grid-col">
-    <fieldset class="span-all-grid-rows grid-6-col gap-5px h-100p">
+<form method="POST" action="/sign_up" class="span-6-cols bg-green">
+    <fieldset class="grid-6 gap-5px h-100p">
         <legend class="font-size-large">Sign up</legend>
 
         
         <input type="text" name="first_name" placeholder="First Name" pattern="^[a-zA-Z]{2,25}$" maxlength="25"
-            class="br-half-rem fs-lg span-3-grid-col" />
+            class="br-half-rem fs-lg span-3-cols" />
     
         <input type="text" name="surname" placeholder="Surname" pattern="^[a-zA-Z]{2,25}$" maxlength="25"
-            class="br-half-rem fs-lg span-3-grid-col" />
+            class="br-half-rem fs-lg span-3-cols" />
         
 
         <input type="email" name="email" placeholder="Email Address" pattern="^\w{2,100}@[a-z0-9]{2,10}\.[a-z]{2,5}$"
-            class="span-all-grid-col br-half-rem fs-lg " />
+            class="span-all-cols br-half-rem fs-lg " />
         
         <input type="password" name="password" placeholder="Password" pattern="^(?=.*[a-z])(?=.*\d)(?=.*[A-Z])[\w@-]{8,30}$"
-            class="span-all-grid-col br-half-rem fs-lg" />
+            class="span-all-cols br-half-rem fs-lg" />
 
-        <div class="span-2-grid-col">
+        <div class="span-2-cols">
             <input type="radio" id="male" name="gender" value="male" />
             <label for="male" class="fs-lg">Male</label>
         </div>
 
-        <div class="span-2-grid-col">
+        <div class="span-2-cols">
             <input type="radio" id="female" name="gender" value="female" />
             <label for="female" class="fs-lg">Female</label>
         </div>
 
-        <div class="span-2-grid-col">
+        <div class="span-2-cols">
             <input type="radio" id="other" name="gender" value="other" />
             <label for="other" class="fs-lg">Other</label>
         </div>
 
-        <div class="span-2-grid-col">
+        <div class="span-2-cols">
             <label for="birthday" class="fs-lg">Date of Birth</label>
             <input type="date" id="birthday" name="birthday"  /> 
         </div>
