--- a/4-sequelize/views/home.hbs
+++ b/4-sequelize/views/home.hbs
@@ -1,2 +1,5 @@
 {{>jumbotron jumbo_content="EFAS"}}
-{{>navbar}}
+{{>navbar 
+    left_nav=(json ' {"Home": "/", "About": "/about"} ')  
+    right_nav=(json ' {"Log in": "/log_in", "Sign up": "/sign_up"} ')
+}}
