--- a/4-sequelize/views/sign_up.hbs
+++ b/4-sequelize/views/sign_up.hbs
@@ -1,2 +1,5 @@
-{{>navbar}}
+{{>navbar 
+    left_nav=(json ' {"Home": "/", "About": "/about"} ')  
+    right_nav=(json ' {"Log in": "/log_in", "Sign up": "/sign_up"} ')
+}}
 {{>sign_up_form}}
