--- a/2-Exphbs/views/partials/navbar.hbs
+++ b/2-Exphbs/views/partials/navbar.hbs
@@ -1,4 +1,4 @@
-<div class="flex justify-space-between align-items-centre span-all-grid-columns bg-grey">
+<div class="flex justify-space-between align-items-centre span-all-cols bg-grey">
     <ul class="flex justify-space-between align-items-centre no-bullets">
         <li class="p-half">Home</li>
         <li class="p-half">About</li>
