--- a/2-Exphbs/views/layouts/main.hbs
+++ b/2-Exphbs/views/layouts/main.hbs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="/public/style.css" />
+        <link href="/public/css/style.css" rel="stylesheet" />
         <title>{{title}}</title>
     </head>
-    <body>
+    <body class="grid-12-20 h-100vh">
         {{{body}}}
     </body>
 </html>
