--- a/2-Exphbs/views/partials/jumbotron.hbs
+++ b/2-Exphbs/views/partials/jumbotron.hbs
@@ -1,3 +1,3 @@
-<div class="flex justify-space-around align-items-centre {{jumbotron_bg}} span-all-grid-columns">
+<div class="flex justify-space-around align-items-centre {{jumbotron_bg}} span-all-cols span-3-rows bold-xxlg">
     {{jumbo_headline}}
 </div>
