--- a/3-Form/views/sign_up.hbs
+++ b/3-Form/views/sign_up.hbs
@@ -3,8 +3,8 @@
     <input type="text" name="first_name" class="lg" pattern="^[a-zA-Z]{2,30}$" placeholder="First Name" />
     <input type="text" name="surname" class="lg" pattern="^[a-zA-Z]{2,30}$" placeholder="First Name" />
 
-    <input type="email" name="email" class="span-all-cols lg" />
-    <input type="password" name="password" pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])[\w$@]{8,20}$" class="span-all-cols lg" />
+    <input type="email" name="email" class="span-all-cols lg" placeholder="Email"/>
+    <input type="password" name="password" pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])[\w$@]{8,20}$" placeholder="Password" class="span-all-cols lg" />
     <div class="flex-aCentre-around">
         <div>
             <input type="radio" id="male" name="gender" value="MALE" />
