--- a/2-ExpHbs/views/home.hbs
+++ b/2-ExpHbs/views/home.hbs
@@ -1,2 +1,3 @@
-{{> jumbotron jumbo_title="EFAS"}}
-{{> navbar bg_colour="bg-red"}}
+{{>jumbotron jumbo_title="EFAS" jumbo_bg_colour="bg-red"}}
+
+{{>navbar nav_bg_colour="bg-green"}}
