--- a/2-ExpHbs/views/partials/jumbotron.hbs
+++ b/2-ExpHbs/views/partials/jumbotron.hbs
@@ -1,3 +1,3 @@
-<div class="span-3-rows span-all-cols bg-green flex-aCentre-around B-xxlg">
+<div class="span-all-cols span-rows-1-4 flex-aCentre-around B-xxlg {{jumbo_bg_colour}}">
     {{jumbo_title}}
 </div>
