--- a/2-ExpHbs/views/layouts/main.hbs
+++ b/2-ExpHbs/views/layouts/main.hbs
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <title>{{title}}</title>
         <link rel="stylesheet" href="/public/css/style.css" />
+        {{title}}
     </head>
-   <body class="grid-12-20 h-100vh">
-       {{{body}}}
-   </body>
+    <body class="grid-12-20 h-100vh">
+        {{{body}}}
+    </body>
 </html>
