--- a/2-ExpHbs/views/partials/navbar.hbs
+++ b/2-ExpHbs/views/partials/navbar.hbs
@@ -1,5 +1,5 @@
 <nav class="span-all-cols flex-between {{nav_bg_colour}}">
-    <ul class="no-bullets flex-around">
+    <ul class="no-bullets flex-around gap-1">
         {{#each nav_left}}
             <li>
                 <a href="{{this}}">{{@key}}</a>
@@ -7,7 +7,7 @@
         {{/each}}
     </ul>
 
-    <ul class="no-bullets flex-around">
+    <ul class="no-bullets flex-around gap-1">
         {{#each nav_right}}
             <li>
                 <a href="{{this}}">{{@key}}</a>
