--- a/Exphbs/views/partials/jumbotron.hbs
+++ b/Exphbs/views/partials/jumbotron.hbs
@@ -1,3 +1,3 @@
-<div class="span-all-cols span-3-rows bg-red flex-aCentre-around">
-    {{jumbo_title}}
+<div class="span-all-cols span-3-rows flex-aCentre-around {{jumbo_bg}}">
+    <h1>{{jumbo_title}}</h1>
 </div>
