--- a/Exphbs/views/partials/navbar.hbs
+++ b/Exphbs/views/partials/navbar.hbs
@@ -1,4 +1,4 @@
-<nav class="span-all-cols flex-between bg-green">
+<nav class="span-all-cols flex-between {{nav_bg}}">
     <ul class="flex-around gap-1">
         {{#each nav_left}} 
             <a href="{{this}}">{{@key}}</a>
