--- a/5-Session/views/home.hbs
+++ b/5-Session/views/home.hbs
@@ -1,2 +1,5 @@
-{{>jumbotron jumbo_title="EFAS"}}
-{{>navbar}}
+{{>navbar nav_bg_colour="bg-green"}}
+
+{{>jumbotron jumbo_title="EFAS" jumbo_bg_colour="bg-red"}}
+
+
