--- a/5-Session/views/partials/jumbotron.hbs
+++ b/5-Session/views/partials/jumbotron.hbs
@@ -1,3 +1,8 @@
-<div class="span-all-cols span-3-rows bg-red">
+<div class="w-100pt h-4 flex-aCentre-around B-xxlg {{jumbo_bg_colour}}">
     {{jumbo_title}}
+    <form method="POST" action="/look_up">
+        <input type="search" name="word" class="xlg" placeholder="Look up a word" />
+    </form>
+        
+    
 </div>
