--- a/5-Session/views/layouts/grid.hbs
+++ b/5-Session/views/layouts/grid.hbs
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="/public/css/style.css" />
         {{title}}
     </head>
-    <body>
+    <body class="grid-12-20 h-100vh">
         {{{body}}}
     </body>
 </html>
